# CODEX_TS

./: .gitignore  README.md  install.bat  install.ps1  pyproject.toml
benchmarks/fixtures/: git_status_verbose.txt  long_log_with_secret.txt  pytest_failure.txt  rg_results.txt
benchmarks/fixtures/sample_repo/: README.md
benchmarks/fixtures/sample_repo/src/: auth.py
ccts/: __init__.py  __main__.py  ab_test.py  compactor.py  hook.py  packer.py  scanner.py  store.py  symbols.py  watchdog.py
docs/: AB_TEST_RESULTS.md  REPO_ANALYSIS.md  USAGE.md  WATCHDOG_REPORT.md  WATCHDOG_REPORT_GLOBAL.md  ab-test-results.json
docs/recording/: 260621-001-codex-ts-efts-rebuild.md
efts/: __init__.py  __main__.py  ab_test.py  compactor.py  hook.py  packer.py  scanner.py  store.py  symbols.py  watchdog.py
outputs/: ccts-performance.html
scripts/: write_eval_report.py
skill/custom-codex-token-saver/: SKILL.md
skill/custom-codex-token-saver/agents/: requirement-watchdog.md
skill/efts/: SKILL.md
skill/efts/agents/: requirement-watchdog.md
tests/: test_ccts_core.py  test_efts_core.py
