[project]
name = "custom-codex-token-saver"
version = "0.1.0"
description = "CCTS: Codex-only token saver for Windows Codex Desktop and CLI"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
ccts = "ccts.__main__:main"

[tool.setuptools]
packages = ["ccts"]
